home-assistant/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: homeassistant
  name: homeassistant
  namespace: homeassistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homeassistant
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      hostNetwork: true # Enable host network mode.
      dnsPolicy: ClusterFirstWithHostNet # Ensure the pod can resolve domain names in the cluster.
      containers:
      - image: ghcr.io/home-assistant/home-assistant:stable
        imagePullPolicy: Always
        name: homeassistant
        ports:
        - containerPort: 8123
          protocol: TCP
        resources:
          requests:
            memory: "4Gi"
            cpu: "1000m"
          limits:
            memory: "6Gi"
            cpu: "2000m"
        volumeMounts:
        - mountPath: /config
          name: homeassistant-config
        - mountPath: /etc/localtime
          name: localtime
          readOnly: true
        - mountPath: /run/dbus
          name: dbus
          readOnly: true
        securityContext:
          capabilities:
            add:
              - NET_ADMIN
              - NET_RAW
      - image: lscr.io/linuxserver/code-server:latest
        imagePullPolicy: Always 
        name: code-server
        ports:
        - containerPort: 8443
        resources:
          requests:
            memory: "1Gi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "500m"
        volumeMounts:
          - mountPath: /home/coder/home-assistant
            name: homeassistant-config
        securityContext:
          runAsUser: 0
          runAsGroup: 0
      - image:  ghcr.io/esphome/esphome
        imagePullPolicy: Always
        name: esphome
        resources:
          requests:
            memory: "1Gi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "500m"
        volumeMounts:
        - mountPath: /config
          name: esphome-config
        - mountPath: /etc/localtime
          name: localtime
          readOnly: true
      - image: eclipse-mosquitto
        imagePullPolicy: Always
        name: mosquitto
        ports:
          - containerPort: 1883
          - containerPort: 9001
        resources:
          requests:
            memory: "1Gi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "500m"
        volumeMounts:
        - mountPath: /mosquitto
          name: mosquitto
      - image: ghcr.io/matter-js/python-matter-server:stable
        imagePullPolicy: Always
        name: matter-server
        ports:
        - containerPort: 5580
          protocol: TCP
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "250m"
        volumeMounts:
        - mountPath: /data
          name: matter-server-data
        - mountPath: /run/dbus
          name: dbus
          readOnly: true
        securityContext:
          appArmorProfile:
            type: Unconfined
          capabilities:
            add:
              - NET_ADMIN
              - NET_RAW
      - image: ghcr.io/koenkk/zigbee2mqtt
        imagePullPolicy: Always
        name: zigbee2mqtt
        command:
        - /bin/sh
        - -c
        - "until nc -z localhost 1883; do echo 'Waiting for mosquitto...'; sleep 5; done && exec node index.js"
        ports:
          - containerPort: 9090
        resources:
          requests:
            memory: "1Gi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "500m"
        volumeMounts:
        - mountPath: /app/data
          name: zigbee2mqtt-data
        - mountPath: /run/udev
          name: udev
          readOnly: true
      volumes:
        - persistentVolumeClaim:
            claimName: homeassistant
          name: homeassistant-config
        - persistentVolumeClaim:
            claimName: esphome
          name: esphome-config
        - persistentVolumeClaim:
            claimName: zigbee2mqtt
          name: zigbee2mqtt-data
        - persistentVolumeClaim:
            claimName: mosquitto
          name: mosquitto
        - hostPath:
            path: /etc/localtime
          name: localtime
        - persistentVolumeClaim:
            claimName: matter-server
          name: matter-server-data
        - hostPath:
            path: /run/dbus
          name: dbus
        - hostPath:
            path: /run/udev
          name: udev
        - hostPath:
            path: /dev/net/tun
          name: dev-tun
