home-assistant/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: homeassistant
  name: homeassistant
  namespace: homeassistant
spec:
  ports:
    - name: web
      port: 8123
      targetPort: 8123
    - name: code-server
      port: 8443
      targetPort: 8443
    - name: esphome
      port: 6052
      targetPort: 6052
    - name: zigbee2mqtt
      port: 9090
      targetPort: 9090
    - name: mosquitto
      port: 9001
      targetPort: 9091
    - name: otbr
      port: 8080
      targetPort: 8080
  selector:
    app: homeassistant
  type: LoadBalancer
